--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@
 !var/cache/.gitkeep
 !var/log/.gitkeep
 !vendor/.gitkeep
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
