--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
+        "symfony/test-pack": "*",
+        "symplify/easy-coding-standard": "^7.2"
     },
     "config": {
         "preferred-install": {
